--- a/action.yml
+++ b/action.yml
@@ -25,20 +25,20 @@ runs:
          github.ref == 'refs/heads/dev' ||
          contains(github.ref, 'refs/heads/feature')
       run: |
-        echo "Environment=Development" >> $GITHUB_ENV
+        echo "Environment=DEV" >> $GITHUB_ENV
       shell: bash
     - name: Deploy to Staging?
       if: |
          contains(github.ref, 'refs/heads/release')     
       run: |
-         echo "Environment=Staging" >> $GITHUB_ENV            
+         echo "Environment=STAGE" >> $GITHUB_ENV            
       shell: bash     
     - name: Deploy to Production?
       if: |
          github.event.release.prerelease == false &&
          github.event_name == 'release'
       run: |
-        echo "Environment=Production" >> $GITHUB_ENV
+        echo "Environment=PROD" >> $GITHUB_ENV
       shell: bash
     - uses: chrnorm/deployment-action@releases/v1
       name: Deploy
