--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,11 @@ runs:
       if: (inputs.deploy-to-environment == 'dev' || inputs.deploy-to-environment == 'stage' || inputs.deploy-to-environment == 'prod')
       run: |
          echo Environment=${{inputs.deploy-to-environment}} >> $GITHUB_ENV
+    - name: Prod?
+      if: (inputs.deploy-to-environment == 'prod' && github.ref != 'refs/heads/master')
+      run: |
+         echo "Only Master branch can release to production"
+         echo Environment=null >> $GITHUB_ENV
       shell: bash
     - uses: chrnorm/deployment-action@releases/v1
       name: Deploy
