--- a/action.yml
+++ b/action.yml
@@ -20,9 +20,8 @@ runs:
       if: |
          contains(github.ref, 'refs/heads/feature')
       run: |
-        git pull
-        git checkout ${{ github.ref_name }}
-        git merge origin/dev
+        git pull --allow-unrelated-histories
+        git merge origin/dev --allow-unrelated-histories
         cd src
         dotnet restore 
         dotnet build --configuration Release --no-restore
